Fix spacing in css and spelling error

--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
   box-sizing: border-box;
   /* border: 1px red solid; */
 }
-main { 
-  height:100vh;
-}
+
 body{
   font-family: 'Open Sans', sans-serif;
   height:100vh;
@@ -13,11 +11,11 @@ body{
   grid-template-rows:40% 60%;
   place-content:stretch;
   grid-template-areas:
-  "aside top"
-  "aside bottom"
+  "left top"
+  "left bottom"
 }
 
-/** top **/
+/****************** top **************** **/
 
 
 .top__container {
@@ -26,12 +24,10 @@ body{
   display:flex;
   justify-content: center;
   padding:20px;
-  height: 40%;
 }
 
 .top__form {
   width:55%;
-  /* height:90%; */
   height: 100%;
   display:flex;
   justify-content: space-around;
@@ -79,7 +75,6 @@ body{
 
 /********* bottom *************/
 .bottom__container {
-  height:60%;
   grid-area:bottom;
   background:#eaeaf4;
   padding:25px 15px;
@@ -163,16 +158,12 @@ ul {
   margin-left:-2.5rem;
 }
 
-/* ul:hover {
-  background-color:#f58e72;
-} */
-
 .aside__hidden-menu {
   display: none;
 }
 
 .aside__container {
-  grid-area:aside;
+  grid-area:left;
   background:#1f1f3d;
 }
 
@@ -228,10 +219,6 @@ ul {
   margin-bottom:10px;
 }
 
-/* .aside__ul--list:hover { 
-  background-color:#f58e72;
-} */
-
 .aside__list--swill:hover{
   background-color:#d14119;
 }
@@ -251,12 +238,15 @@ ul {
 }
 
 @media (max-width: 870px) {
+
   .aside__input.aside__input--btn {
     font-size: .6em;
   }
+
   .bottom__display--message {
     font-size: 1.0em;
   }
+
   .bottom__article--card {
     width: 45%;
   }
@@ -269,38 +259,45 @@ ul {
     grid-template-columns: 100%;
     grid-template-areas: unset;
   }
+
   .aside__hidden-menu {
     display: inherit;
     display: inline-block;
     margin-right: 100px;
-    font-size: 2.em;
+    font-size: 2em;
   }
+
   .aside__input.aside__input--btn {
     font-size: 1.4em;
   }
+
   .top__form {
     width: 100%;
   }
+
   .bottom__article--card {
     margin: 10px 0;
     width: 100%;
     height: 250px;
   }
+
   .bottom__display--message {
     font-size: .80em;
   }
+
   .bottom__header--card {
     height: 15%;
   }
+
   .bottom__footer--card {
     height: 15%;
   }
+
   .bottom__title--card {
     margin-top: 5px;
     margin-bottom: 0px;
   }
+
   .bottom__paragraph--card {
     margin-top: 10px;
   }
-  
-  
